--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -15,16 +15,16 @@
         justify-content: space-between;
         align-items: center;
         height: 40vh;
+        max-height: 363px;
         min-width: 200px;
         max-width: 323px;
-        max-height: 363px;
+        padding: 10%;
 
         margin: 10px;
         background: #FFFFFF;
         /* grey-2 */
-        padding: 10%;
         border-radius: 4px;
-        border: solid 1px gray;
+        border: solid 1px rgba(233, 236, 239, 1);
     }
 
     p {
@@ -153,18 +153,24 @@
     .totalPrice {
 
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
-        margin: 5% 0px;
         height: 20vh;
         color: rgba(33, 37, 41, 1);
-        padding: 6%;
         flex-direction: column;
+        
+        padding: 6%;
         min-width: 200px;
+        margin: 5% 0px;
+        width: 95%;
+        max-width: 406px;
+        
 
-
-        /* grey-2 */
-
+        /* max-height: 363px;
+        min-width: 200px;
+       
+        padding: 10%; */
+        
         border: 1px solid #E9ECEF;
         box-sizing: border-box;
         border-radius: 4px;
