--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   }
 
   .App-header {
-
     min-height: 14vh;
     display: flex;
     flex-direction: row;
@@ -37,6 +36,13 @@
     border-radius: 8px;
   }
 
+  .App-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
 }
 
 @media (min-width: 800px) {
@@ -46,6 +52,7 @@
     flex-direction: row;
     justify-content: space-around;
     width: 90vw;
+    align-items: start;
   }
 
 }
@@ -58,5 +65,4 @@
     justify-content: space-around;
     width: 80vw;
   }
-
 }
