--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,18 +1,37 @@
 @media (min-width: 320px) {
 
-    .Card {
+ 
+    .Despesa{
+        border-left: #E34981 solid 5px;
         display: flex;
         justify-content: space-around;
         align-items: flex-start;
         flex-direction: column;
-        width: 80%;
-        height: 30px;
+        width: 100%;
+        height: 40px;
         color: rgba(33, 37, 41, 1);
 
         /* grey-1 */
-        margin: 2% 5%;
+        margin: 2% 0;
         background: #F8F9FA;
-        border-radius: 4px;
+        border-radius: 10px;
+        padding: 5%;
+    }
+
+    .Entrada{
+        border-left: #03B898 solid 5px;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 100%;
+        height: 40px;
+        color: rgba(33, 37, 41, 1);
+
+        /* grey-1 */
+        margin: 2% 0;
+        background: #F8F9FA;
+        border-radius: 10px;
         padding: 5%;
     }
 
@@ -24,11 +43,11 @@
 
     .card-description {
         display: flex;
-        width: 80%;
+        width: 60%;
         height: 40%;
         justify-content: flex-start;
         align-items: center;
-        margin: 4%;
+        margin: 3%;
 
         /* Title3 */
         font-family: 'Nunito', 'sans';
@@ -46,6 +65,8 @@
 
         display: flex;
         width: 30%;
+        align-items: flex-start;
+        margin-top: 2%;
    
         /* Body */
         font-family: 'Nunito', 'sans';
@@ -55,9 +76,9 @@
 
     .card-type {
 
-        margin: 5%;
+        margin: 3%;
         height: 30%;
-
+        margin-top: 6%;
         /* Body */
         font-family: 'Nunito', 'sans';
         font-style: normal;
@@ -68,12 +89,13 @@
 
     .excluir {
         background: #F8F9FA;
-        color: none;
         border: none;
     }
+
     .trash{
+        margin-left: auto;
         color: gray;
-        padding: 5px;
+        padding: 4px;
 
         border-radius: 2.46154px;
     }
@@ -84,6 +106,11 @@
 }
 
 @media (min-width: 435px) {
+
+    .cardList{
+        justify-content: center;
+        width: 100%;
+    }
 
     .card-description {
         font-size: 18px;
@@ -98,6 +125,32 @@
         font-size: 16px;
     }
 
+    .space-cards{
+        width: 100%;
+    }
+    
+    .card-value{
+        width: 30%;
+        flex-wrap: nowrap;
+    }
 }
 
-@media (min-width: 840px) {}
+@media (min-width: 840px) {
+
+    .Card {
+        width: 90%
+    }
+    
+    .cardList{
+        justify-content: center;
+        width: 90%;
+    }
+
+    .card{
+        width: 90%;
+    }
+
+    .space-cards{
+        width: 80%;
+    }
+}
