--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -6,7 +6,6 @@
         align-items: center;
         flex-direction: column;
         max-height: 900px;
-
     }
 
     form {
@@ -14,15 +13,11 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        height: 40vh;
-        max-height: 363px;
-        min-width: 200px;
-        max-width: 323px;
-        padding: 10%;
-
+        height: 363px;
+        width: 300px;
+        padding: 5%;
         margin: 10px;
         background: #FFFFFF;
-        /* grey-2 */
         border-radius: 4px;
         border: solid 1px rgba(233, 236, 239, 1);
     }
@@ -56,7 +51,7 @@
         width: 100%;
         color: rgba(91, 97, 102, 1);
         justify-content: space-around;
-        margin-bottom:  10px;
+        margin-bottom: 10px;
     }
 
     .description {
@@ -64,11 +59,9 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-
         padding: 5%;
         width: 100%;
         background: #F8F9FA;
-
         font-size: 16px;
         box-sizing: border-box;
         border-radius: 8px;
@@ -89,15 +82,10 @@
         justify-content: space-between;
         align-items: center;
         padding: 0px 16px;
-
-        height: 100%;
-        width: 100%;
-
-        /* grey-0 */
-        font-size: 18px;
+        height: 50px;
+        width: 120px;
+        font-size: 16px;
         background: #F8F9FA;
-        /* grey-0 */
-
         border: 2px solid #F8F9FA;
         box-sizing: border-box;
         border-radius: 8px;
@@ -110,14 +98,10 @@
         justify-content: space-between;
         align-items: center;
         padding: 0px 16px;
-
-        height: 100%;
-        width: 100%;
-        /* grey-0 */
-
+        height: 50px;
+        width: 150px;
         background: #F8F9FA;
-        /* grey-0 */
-
+        font-size: 16px;
         border: 2px solid #F8F9FA;
         box-sizing: border-box;
         border-radius: 8px;
@@ -134,17 +118,10 @@
         justify-content: center;
         align-items: center;
         padding: 13px 20px;
-
-        width: 100%;
         height: 15%;
         color: white;
         font-size: 18px;
-
-
-
         background: #FD377E;
-        /* color-primary */
-
         border: 2px solid #FD377E;
         box-sizing: border-box;
         border-radius: 8px;
@@ -158,19 +135,11 @@
         height: 20vh;
         color: rgba(33, 37, 41, 1);
         flex-direction: column;
-        
         padding: 6%;
         min-width: 200px;
         margin: 5% 0px;
         width: 95%;
         max-width: 406px;
-        
-
-        /* max-height: 363px;
-        min-width: 200px;
-       
-        padding: 10%; */
-        
         border: 1px solid #E9ECEF;
         box-sizing: border-box;
         border-radius: 4px;
@@ -178,21 +147,15 @@
     }
 
     .form-total-price {
-
-
         font-family: 'Nunito', 'sans';
         font-style: normal;
         font-weight: 700;
         font-size: 100%;
         line-height: 30px;
         margin: 10px;
-
-
         min-width: 260px;
         max-width: 323px;
-
         color: #FD377E;
-
     }
 
     .legend-form {
@@ -221,11 +184,11 @@
 @media (min-width: 435px) {
 
     .description {
-        font-size: 20px;
+        font-size: 17px;
     }
 
     .price {
-        font-size: 20px;
+        font-size: 17px;
     }
 
     select {
@@ -239,7 +202,18 @@
         width: 30vw;
     }
 
-    .totalPrice {}
+    .totalPrice {
+        width: 330px;
+        padding: 5%;
+        margin: 10px;
+    }
+}
+
+@media (min-width: 980px) {
+
+    .totalPrice {
+        width: 350px;
+    }
 
 
 }
