--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -1,13 +1,8 @@
 @media (min-width: 320px) {
     
     .sem-lancamentos {
-
-        /* identical to box height, or 155% */
         margin: 5%;
         width: 80%;
-        
-        /* grey-3 */
-        
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
@@ -29,7 +24,7 @@
         width: 100vw;
         min-height: 20%;
         margin: 0;
-        justify-content: content;
+        justify-content: center;
         align-items: center;
         flex-direction: column;
     }
@@ -38,8 +33,9 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
-        width: 90%;
+        justify-content: space-between;
+        width: 100%;
+        height: 20%;
 
     }
 
@@ -47,11 +43,12 @@
         display: none;
         margin: 10px;
         font-size: 20px;
+        width: 40%;
     }
 
     button {
-        margin: 5px;
-        width: 25%;
+        margin: 3px;
+        width: 30%;
     }
 
     .btn-gray {
@@ -68,14 +65,19 @@
         justify-content: center;
         flex-direction: column;
     }
-
-
-
 }
 
 @media (min-width: 400px) {
+
+    .cardList {
+        width: 85%;
+        justify-content: center;
+        margin: 0px;
+    }
+
     .sem-lancamentos {
         margin: 5%;
+        width: 80%;
     }
 
     .card-vazio1 {
@@ -86,37 +88,109 @@
     }
 
     .card-vazio2 {
-
         height: 10px;
         margin-left: 10%;
-
     }
 }
 
+@media (min-width: 560px) {
+
+    .cardList {
+        width: 80%;
+    }
+}
 
 @media (min-width: 800px) {
 
+    .card-vazio {
+        width: 100%;
+    }
+
     .cardList {
         width: 50vw;
+        margin-left: 5%;
     }
 
     .header-list {
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: 5%;
     }
 
     h3 {
         display: flex;
         flex-wrap: nowrap;
-        width: 50%;
+        width: 25%;
+        justify-content: center;
+        margin-bottom: 5%;
     }
 
     button {
         margin: 5px;
-        width: 25%;
+        width: 17%;
         height: 50px;
     }
 
+    .btn-gray {
+        border: none;
+        color: gray;
+        background: #E9ECEF;
+        width: 20%;
+    }
 
+    .sem-lancamentos {
+        justify-content: center;
+        margin-bottom: 5%;
+    }
+}
+
+@media (min-width: 980px) {
+
+    .header-list{
+        flex-direction: row;
+        width: 100%;
+    }
+
+    h3 {
+        width: 35%;
+    }
+
+    .btn-gray {
+        border: none;
+        color: gray;
+        background: #E9ECEF;
+        width: 20%;
+    }
+
+
+    h3 {
+        margin: 10px;
+        font-size: 20px;
+        width: 30%;
+    }
+
+    button {
+        margin: 3px;
+        width: 20%;
+    }
+
+    .btn-gray {
+        border: none;
+        color: gray;
+        background: #E9ECEF;
+        width: 20%;
+    }
+}
+
+@media (min-width: 1280px) {
+
+    button {
+        width: 15%;
+    }
+
+    .btn-gray {
+        width: 15%;
+    }
 }
