--- a/src/components/LandingPage/styles.css
+++ b/src/components/LandingPage/styles.css
@@ -5,26 +5,29 @@
         background: #212529;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: row-reverse;
         height: 100vh;
         width: 100vw;
+        box-sizing: border-box;
     }
 
     .informacoes {
-        justify-items: auto;
-        width: 80%;
-        height: 80%;
+        display: flex;
+        align-items: center;
+        justify-items: space-between;
+        flex-direction: column;
+        width: 320px;
+        height: 390px;
         margin: 20px;
         position: absolute;
         opacity: 1;
+        padding: 0;
     }
 
     .LandingPage-titulo {
-        width: 90%;
-        height: 144px;
-        left: 256px;
-        top: 264px;
-        margin-top: 30px;
+        width: 290px;
+        height: 224px;
+        margin-top: 40px;
 
         /* Title1 */
         font-family: 'Nunito', sans-serif;
@@ -40,13 +43,19 @@
 
     .landing-imagem {
         opacity: 0.1;
-        width: 100vw;
-        max-width: 593px;
-        max-height: 593px;
+        width: 100%;
+        height: 80%;
+    }
+
+    .imagem{
+        width: 100%;
+        height: 100%;
     }
 
     .landing-legenda {
         color: #fff;
+        align-items: center;
+        justify-content: center;
     }
 
     .landing-btn {
@@ -56,7 +65,6 @@
         align-items: center;
         padding: 13px 20px;
 
-        position: absolute;
         width: 241px;
         height: 48px;
 
@@ -88,13 +96,13 @@
 @media (min-width: 900px) {
 
     .LandingPage {
-        flex-direction: row;
         justify-content: center;
 
     }
 
     .informacoes {
-        width: 30%;
+
+        width: 40%;
         align-items: center;
         flex-direction: column;
         justify-content: center;
@@ -104,7 +112,7 @@
 
     .landing-imagem {
         opacity: 1;
-        width: 40%;
+        width: 50%;
         margin: 0;
     }
 
